# NetworkBox

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig
components/http_server/: CMakeLists.txt  http_server.c  http_server.h  response_html.h
components/nvs/: CMakeLists.txt  nvs.c  nvs.h
components/socket/: CMakeLists.txt  udp.c  udp.h
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
main/: CMakeLists.txt  main.c
